2008-03-03  Noel O'Boyle <baoilleach@gmail.com>
	
	* tests/Makefile.am, files/3d.head.2.cml, tests/cmlreadfile.cpp,
	test/wrapper.sh: Add tests for CML scripting support

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp: Ensure files match .so exactly. Prevents
	errors when looking for .so.dSYM files.

	* src/formats/MCDLformat.cpp: Fix GCC compile error.

	* src/formats/Makefile.am, src/formats/Makefile.in: Build rsmi and
	MCDL formats.

	* src/config.h.in: Regenerate for HAVE_BOOST symbol.

	* src/forcefields/forcefielduff.*: Fix angular
	gradients. Previous implementation mis-read paper for force
	constant.

	* tools/obminimize.cpp: Validate gradients before starting
	minimize. Useful for debugging force fields.

2008-03-02  Noel O'Boyle <baoilleach@gmail.com>
	
	* configure.in: Only use BOOST for shared_pointer if the GCC4.x
	implementation is not available.

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl: Add dependency checking for libopenbabel. This
	prevents people trying to run automated CPAN tests without the
	library.

2008-03-01  Noel O'Boyle <baoilleach@gmail.com>
	
	* acinclude.m4: Set "have_boost" to "yes" so I can test it in
	configure.in
	* configure.in: Set Automake variable HAVE_SHARED_POINTER if the user
	has either of Boost or tr1/memory (gcc4.x)
	If "have_boost" is "yes" then set both the Automake variable
	USE_BOOST_FLAGS and the C++ #define USE_BOOST
	* src/formats/Makefile.am: Set the compile flags for BOOST if necessary
	Only compile chemkinformat, rxnformat and chemdrawcdxformat if
	HAVE_SHARED_POINTER is true

2008-02-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/generic.h (OBVectorData): New class for storing vector3
	(e.g., dipole moment, transition dipole, etc.)

2008-02-29  Chris Morley

	* src/obconversion.cpp:mods to OBConversion destructor to prevent
	input or output stream being deleted twice when there is an