@@ -269,7 +269,7 @@ namespace OpenBabel {
       POLAR       = 13,
       POSITIVE    = 14,
       SMALL       = 15,
-      SURFACE     = 16,
+      SURFACE     = 16
     };
   }
 
@@ -287,7 +287,7 @@ namespace OpenBabel {
       SHAPELY_BACKBONE = 6,
       SHAPELY_SPECIAL  = 7,
       SIDECHAIN        = 8,
-      SUGAR_PHOSPHATE  = 9,
+      SUGAR_PHOSPHATE  = 9
     };
   }
 
@@ -354,7 +354,7 @@ namespace OpenBabel {
       NAD   = 50,
       COA   = 51,
       NAP   = 52,
-      NDP   = 53,
+      NDP   = 53
     };
   }
 
@@ -372,7 +372,7 @@ namespace OpenBabel {
       PURINE       = 6,
       PYRIMIDINE   = 7,
       SOLVENT      = 8,
-      WATER        = 9,
+      WATER        = 9
     };
   }
 
