@@ -1,3 +1,9 @@
+2008-03-03  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/openbabel/math/vector3.h, include/openbabel/base.h,
+	include/openbabel/residue.h: Fixes for compiling with GCC
+	-pedantic flag.
+
 2008-03-03  Noel O'Boyle <baoilleach@gmail.com>
 	
 	* tests/Makefile.am, files/3d.head.2.cml, tests/cmlreadfile.cpp,
